bk_ida/gccida/c2/emit_cmp_and_jump_insns
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3819:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3821:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3838:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v22; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3853:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3854:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v38; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3855:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3890:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode oldmode; // [rsp+18h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3891:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v76; // [rsp+20h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3924:20: error: use of undeclared identifier 'machine_mode'
v10 = force_reg( ( machine_mode)v8, v10); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3932:20: error: use of undeclared identifier 'machine_mode'
v11 = force_reg( ( machine_mode)v8, v11); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:3939:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v22 = mode_class_0[( int)v8]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4121:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4127:31: error: invalid suffix 'xmode' on integer constant
v10 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4128:38: error: invalid suffix 'xmode' on integer constant
v71 = hard_libcall_value( *(short *)0xmode); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4131:27: error: invalid suffix 'xmode' on integer constant
LODWORD( v8) = *(short *)0xmode; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4152:26: error: use of undeclared identifier 'machine_mode'
v10 = convert_to_mode( ( machine_mode)v68, v65, 0); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4153:26: error: use of undeclared identifier 'machine_mode'
v11 = convert_to_mode( ( machine_mode)v68, v66, 0); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4165:62: error: invalid suffix 'xmode' on integer constant
emit_library_call( libfunc, LCT_CONST_MAKE_BLOCK, *(short *)0xmode, 2, v10, ( unsigned int)v8, v11, v8); 
                                                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/optabs.c:4166:31: error: invalid suffix 'xmode' on integer constant
v10 = gen_reg_rtx( *(short *)0xmode); 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_cmp_and_jump_insns/src/obj/optabs.o] Error 1
